# r2-gtk3

./: Cargo.toml
src/: application.rs
src/models/: search_provider.rs
src/widgets/: window.rs
src/widgets/preferences/: window.rs
ui/: window.ui
